# tychons

./: .gitignore  .pre-commit-config.yaml  PLAN.md  README.md  pyproject.toml
.github/workflows/: lint.yml
docs/: _config.yml  getting-started.md  how-it-works.md  index.md  interoperability.md  security.md  technical-reference.md  why.md  wordlists.md
docs/src/: tychons-spec-v0.1.0.md
src/tychons/: __init__.py  tychons.py
tests/: conftest.py  test_derivation.py  test_svg.py  test_validation.py
