[project]
name = "tychons"
version = "0.1.0"
description = "Constellation-style visual identity badges for public keys"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2" }
dependencies = [
    "blake3",
]

[project.optional-dependencies]
raster = ["Pillow"]

[project.scripts]
tychons = "tychons.tychons:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tychons"]
# Include font and wordlist data files in the package
artifacts = [
    "src/tychons/fonts/",
    "src/tychons/wordlists/",
]

[tool.uv]
dev-dependencies = [
    "Pillow",   # convenient to have raster output during development
]
