[project]
name = "tychons"
version = "0.1.0"
description = "Constellation-style visual identity badges for public keys"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2" }
dependencies = [
    "blake3",
]

[project.optional-dependencies]
raster = ["Pillow"]

[project.scripts]
tychons = "tychons.tychons:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tychons"]
# Include font and wordlist data files in the package
artifacts = [
    "src/tychons/fonts/",
    "src/tychons/wordlists/",
]

[tool.uv]
dev-dependencies = [
    "Pillow",
    "pytest",
    "ruff",
    "mypy",
    "pre-commit",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["F", "E", "W", "I", "N", "UP", "B", "A", "SIM", "TCH", "RUF", "PT", "S", "C4", "PIE", "T20"]
ignore = ["E501", "S311", "T201"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "PT011"]

[tool.ruff.lint.isort]
known-first-party = ["tychons"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
packages = ["tychons"]
strict = true
warn_return_any = true
warn_unused_configs = true
warn_unreachable = true
show_error_codes = true
show_column_numbers = true

[[tool.mypy.overrides]]
module = "blake3.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "PIL.*"
ignore_missing_imports = true
